Updated homepage entry in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-calculator-app",
-  "homepage": "https://Stathis-Renieris.github.io/react-calculator-app",
+  "homepage": "https://Stathis-Renieris.github.io/project-react-calculator-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
